# vkdt

./: .gitattributes  .gitignore  .gitmodules  LICENCE.bsd2  Makefile  TODO  flake.nix  readme.md  release.md  vkdt.desktop
.github/workflows/: c-cpp.yml  codeql.yml  nightly.yml
android/: TODO  build.gradle  gradle.properties  readme.md  settings.gradle
android/gui/: CMakeLists.txt  build.gradle  mods.cmake
android/gui/mod/: create_cmake.sh
android/gui/mod/align/: CMakeLists.txt
android/gui/mod/autoexp/: CMakeLists.txt
android/gui/mod/blend/: CMakeLists.txt
android/gui/mod/bvh/: CMakeLists.txt
android/gui/mod/ca/: CMakeLists.txt
android/gui/mod/ciediag/: CMakeLists.txt
android/gui/mod/cnngenin/: CMakeLists.txt
android/gui/mod/colenc/: CMakeLists.txt
android/gui/mod/colour/: CMakeLists.txt
android/gui/mod/const/: CMakeLists.txt
android/gui/mod/contrast/: CMakeLists.txt
android/gui/mod/crop/: CMakeLists.txt
android/gui/mod/curves/: CMakeLists.txt
android/gui/mod/deconv/: CMakeLists.txt
android/gui/mod/dehaze/: CMakeLists.txt
android/gui/mod/demosaic/: CMakeLists.txt
android/gui/mod/denoise/: CMakeLists.txt
android/gui/mod/dmlp-t/: CMakeLists.txt
android/gui/mod/draw/: CMakeLists.txt
android/gui/mod/eq/: CMakeLists.txt
android/gui/mod/filmcurv/: CMakeLists.txt
android/gui/mod/filmsim/: CMakeLists.txt
android/gui/mod/format/: CMakeLists.txt
android/gui/mod/frame/: CMakeLists.txt
android/gui/mod/g-csolid/: CMakeLists.txt
android/gui/mod/g-wobble/: CMakeLists.txt
android/gui/mod/guided/: CMakeLists.txt
android/gui/mod/hilite/: CMakeLists.txt
android/gui/mod/hist/: CMakeLists.txt
android/gui/mod/hotpx/: CMakeLists.txt
android/gui/mod/i-bc1/: CMakeLists.txt
android/gui/mod/i-exr/: CMakeLists.txt
android/gui/mod/i-hdr/: CMakeLists.txt
android/gui/mod/i-jpg/: CMakeLists.txt
android/gui/mod/i-jpglst/: CMakeLists.txt
android/gui/mod/i-lut/: CMakeLists.txt
android/gui/mod/i-mlv/: CMakeLists.txt
android/gui/mod/i-obj/: CMakeLists.txt
android/gui/mod/i-pfm/: CMakeLists.txt
android/gui/mod/i-raw/: CMakeLists.txt
android/gui/mod/i-v4l2/: CMakeLists.txt
android/gui/mod/i-vid/: CMakeLists.txt
android/gui/mod/inpaint/: CMakeLists.txt
android/gui/mod/jddcnn/: CMakeLists.txt
android/gui/mod/kpn/: CMakeLists.txt
android/gui/mod/kpn-t/: CMakeLists.txt
android/gui/mod/lens/: CMakeLists.txt
android/gui/mod/llap/: CMakeLists.txt
android/gui/mod/loss/: CMakeLists.txt
android/gui/mod/mask/: CMakeLists.txt
android/gui/mod/mv2rot/: CMakeLists.txt
android/gui/mod/negative/: CMakeLists.txt
android/gui/mod/nlr/: CMakeLists.txt
android/gui/mod/nprof/: CMakeLists.txt
android/gui/mod/o-bc1/: CMakeLists.txt
android/gui/mod/o-copy/: CMakeLists.txt
android/gui/mod/o-csv/: CMakeLists.txt
android/gui/mod/o-jpg/: CMakeLists.txt
android/gui/mod/o-lut/: CMakeLists.txt
android/gui/mod/o-null/: CMakeLists.txt
android/gui/mod/o-pfm/: CMakeLists.txt
android/gui/mod/o-vid/: CMakeLists.txt
android/gui/mod/physarum/: CMakeLists.txt
android/gui/mod/pick/: CMakeLists.txt
android/gui/mod/rawhist/: CMakeLists.txt
android/gui/mod/resize/: CMakeLists.txt
android/gui/mod/resnet/: CMakeLists.txt
android/gui/mod/rt/: CMakeLists.txt
android/gui/mod/svgf/: CMakeLists.txt
android/gui/mod/svgf2/: CMakeLists.txt
android/gui/mod/vis/: CMakeLists.txt
android/gui/mod/wavelet/: CMakeLists.txt
android/gui/mod/zones/: CMakeLists.txt
android/gui/src/main/: AndroidManifest.xml
android/gui/src/main/java/org/dreggn/vkdt/: VulkanActivity.java
android/gui/src/main/vulkan_wrapper/: vulkan_wrapper.c  vulkan_wrapper.h
doc/: colourmanagement.md  core.md  core.txt  noiseprofiling.md  release.md
doc/howto/: howto.md
doc/release-1.0/: readme.md
ext/: Makefile
ext/igfb/: imfilebrowser.h
ext/pthread-pool/: AUTHORS  Makefile  README  consistency.c  consistency.h  fatal.h  pthread_pool.h  pthread_pool_create.c  pthread_pool_destroy.c  pthread_pool_join.c  pthread_pool_task_destroy.c  pthread_pool_task_getarg.c  pthread_pool_task_getretval.c  pthread_pool_task_getroutine.c  pthread_pool_task_init.c  pthread_pool_tryjoin.c  pthread_pool_wait.c  pthread_pool_worker_destroy.c  pthread_pool_worker_init.c  pthread_poolattr_destroy.c  pthread_poolattr_getdetectstarve.c  pthread_poolattr_getmaxworkers.c  pthread_poolattr_getminworkers.c  pthread_poolattr_init.c  pthread_poolattr_setdetectstarve.c  pthread_poolattr_setmaxworkers.c  pthread_poolattr_setminworkers.c  util.c  util.h  worker_thread.c  worker_thread.h
src/: Makefile  filmsim.lut.xz  font_metrics.lut.xz  font_msdf.lut.xz
src/cli/: .gitignore  Makefile  flat.mk  main.c  readme.md  vkrun.h
src/core/: clip.h  colour.h  core.h  exiftool.h  flat.mk  fs.h  half.h  inpaint.h  log.c  log.h  lut.h  mat3.h  sig.h  signal.h  solve.h  sort.h  strexpand.h  threads.c  threads.h  tools.h  utf8.rc
src/db/: db.c  db.h  exif.h  flat.mk  hash.h  murmur3.h  rc.c  rc.h  readme.md  stringpool-fwd.h  stringpool.h  strptime.c  strptime.h  thumbnails.c  thumbnails.h
src/fit/: fit.c  flat.mk  readme.md
src/gui/: Makefile  actionkey.h  api-gui.h  api.h  api.hh  api_gui.h  darkroom-util.h  darkroom.c  darkroom.h  dragkey.h  dtucs.h  files.h  flat.mk  font_metrics.h  gui.c  gui.h  hotkey.h  hotkey.hh  hsluv.h  imhotkey.hh  imnodes.cc  imnodes.h  imnodes_internal.h  job_copy.h  keyaccel.h  keyaccel.hh  lighttable.h  main.c  main_android.c  menu.h  nk.h  nodes.h  nuklear.h  nuklear_glfw_vulkan.h  readme.md  render.c  render.cc  render.cpp  render.h  render_darkroom.c  (+41 more)
src/iop/: contrast.c  locallaplacian.comp  readme.md  vkatrous.comp
src/lib/: libvkdt.h  vkdt.h
src/pipe/: .gitignore  Makefile  TODO  alloc.c  alloc.h  anim.h  asciiio.h  connector.c  connector.h  connector.inc  cycles.h  dlist.h  dng_opcode.c  dng_opcode.h  draw.h  flat.mk  geo.h  global.c  global.h  graph-defaults.h  graph-export.c  graph-export.h  graph-fwd.h  graph-history.h  graph-io.c  io.h  (+29 more)
src/pipe/modules/i-raw/rawloader-c/: Cargo.toml  lib.rs  rawloader.h
tests/: test_invariant_inpaint.h
(+1378 files in other folders)
