set(NAME i-bc1)
set(MOD i-bc1)
set(SRC_DIR ../../../../src)
set(MOD_DIR ${SRC_DIR}/pipe/modules/${MOD})
set(ASS_DIR ../../assets)
include_directories(${SRC_DIR})
include_directories(${MOD_DIR})

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DVKDT_DSO_BUILD -D__USE_BSD=1")
add_library(i-bc1 SHARED ${MOD_DIR}/main.c)
target_link_libraries(i-bc1 android)
target_link_libraries(i-bc1 z)
