set(NAME i-jpg)
set(MOD i-jpg)
set(SRC_DIR ../../../../src)
set(MOD_DIR ${SRC_DIR}/pipe/modules/${MOD})
set(ASS_DIR ../../assets)
include_directories(${SRC_DIR})
include_directories(${MOD_DIR})

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DVKDT_DSO_BUILD -D__USE_BSD=1")
add_library(i-jpg SHARED ${MOD_DIR}/main.c)
target_link_libraries(i-jpg android)
include_directories(${CMAKE_BINARY_DIR}/libjpeg-turbo/src)
include_directories(${CMAKE_BINARY_DIR}/libjpeg-turbo-build)
add_dependencies(i-jpg jpeg-turbo)
target_link_libraries(i-jpg jpeg)
