set(NAME o-jpg)
set(MOD o-jpg)
set(SRC_DIR ../../../../src)
set(MOD_DIR ${SRC_DIR}/pipe/modules/${MOD})
set(ASS_DIR ../../assets)
include_directories(${SRC_DIR})
include_directories(${MOD_DIR})
include_directories(${CMAKE_BINARY_DIR}/libjpeg-turbo/src)
include_directories(${CMAKE_BINARY_DIR}/libjpeg-turbo-build)

set(CMAKE_C_FLAGS " -DVKDT_DSO_BUILD")
add_library(o-jpg SHARED ${MOD_DIR}/main.c)
add_dependencies(o-jpg jpeg-turbo)
target_link_libraries(o-jpg jpeg)
