set(NAME o-lut)
set(MOD o-lut)
set(SRC_DIR ../../../../src)
set(MOD_DIR ${SRC_DIR}/pipe/modules/${MOD})
set(ASS_DIR ../../assets)
include_directories(${SRC_DIR})
include_directories(${MOD_DIR})

set(CMAKE_C_FLAGS " -DVKDT_DSO_BUILD")
add_library(o-lut SHARED ${MOD_DIR}/main.c)
# target_link_libraries(o-lut z)
