[package]
name = "rawloader-clib"
description = "thin c bindings for rawler"
version = "0.1.0"
authors = ["Johannes Hanika <hanika@kit.edu>"]
license = "WTFPL"
edition = "2018"

[lib]
name = "rawloader"
path = "lib.rs"
crate-type = ["staticlib"]

[dependencies]
# rawler = {path = "../dnglab/rawler", version = "0.5.1"}
rawler = { git = "https://github.com/dnglab/dnglab", rev = "af71c11f" }
libc = "0.2.148"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true
